# ipc_utils

./: .gitignore  CMakeLists.txt  README.md
examples/cppnodejs/: README.md  binding.gyp  main.cpp  main.js  package-lock.json  package.json
src/: client_prototype.cpp  host_prototype.cpp  main.cpp  receiver.cpp  sender.cpp
